make report more visible and easy to understandable .....
